--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1 class="Main">Discover hidden places in the world around you</h1>
+
+    <div class="Sec1">
+      <h1 class="Main">Discover hidden places in the world around you</h1>
+      <p class="Para1">Download Excursion (Coming Soon!)</p>
+    </div>
+
+    <div class="Sec2">
+      <video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg">
+        Video not supported
+      </video>
+      <h1 class="Second">Your personal travel guide</h1>
+      <p class="Para2">Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+    </div>
+
+    <div class="Sec3">
+      <img src="./resources/images/camp.jpg">
+      <p><img src="./resources/images/phone.png"></p>
+      <h1 class="Third">Coming Soon for iPhone and Android</h1>
+      <p class="Para3">Download Excursion (Coming Soon!)</p>
+    </div>
+
   </body>
 </html>
