--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
       <p class="Para3">Download Excursion (Coming Soon!)</p>
     </div>
 
+    <div class="Sec4">
+      <h3>© Excursion</h3>
+    </div>
   </body>
 </html>
