--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@
   </head>
   <body>
 
-    <div class="Sec1">
+    <div id="DownloadLink">
       <h1 class="Main">Discover hidden places in the world around you</h1>
-      <p class="Para1">Download Excursion (Coming Soon!)</p>
+      <p class="Para3"><a href="#DownloadLink">Download Excursion (Coming Soon!)</a></p>
     </div>
 
-    <div class="Sec2">
+    <div id="Sec2">
       <video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg">
         Video not supported
       </video>
       <h1 class="Second">Your personal travel guide</h1>
       <p class="Para2">Excursion remembers places you like, and recommends new points of interest around you.</p>
-
     </div>
 
-    <div class="Sec3">
+    <div id="Sec3">
       <img src="./resources/images/camp.jpg">
       <p><img src="./resources/images/phone.png"></p>
       <h1 class="Third">Coming Soon for iPhone and Android</h1>
-      <p class="Para3">Download Excursion (Coming Soon!)</p>
+      <nav>
+        <p class="Para3"><a href="#DownloadLink">Download Excursion (Coming Soon!)</a></p>
+      </nav>
     </div>
 
-    <div class="Sec4">
+    <div id="Sec4">
       <h3>© Excursion</h3>
     </div>
   </body>
